--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "assignment2-deploy",
+  "name": "mockserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start":"node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Mohit-Raj-Singh/mockServer.git"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Mohit-Raj-Singh/mockServer/issues"
+  },
+  "homepage": "https://github.com/Mohit-Raj-Singh/mockServer#readme",
+  "dependencies": {
+    "json-server": "^0.17.2"
+  }
 }
